test/langtools/tools/javac/valhalla/lworld-values/RefDefault/TreeCopierTest.out
TreeCopierTest.java:21:14: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: TreeCopierTest.GenericRefDefault.val<java.lang.Object>, TreeCopierTest.RefDefault.val)
TreeCopierTest.java:25:14: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: TreeCopierTest.GenericValDefault.ref<java.lang.Object>, TreeCopierTest.ValDefault.ref)
2 errors
